<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_margin="8dp"
tools:context=".activity.PlaceViewActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIntoPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/place_into_desc"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/place_into">
        </TextView>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePhotoPlace"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@mipmap/ic_places" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/country_name_desc"
            android:textStyle="bold"
            android:labelFor="@id/tvPlaceName"
            android:text="@string/place_name">
        </TextView>

        <TextView
            android:id="@+id/tvPlaceName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/read_place_description"
            android:textStyle="bold"
            android:labelFor="@id/tvPlaceDescription"
            android:text="@string/read_place_description">
        </TextView>

        <TextView
            android:id="@+id/tvPlaceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:maxLines="5"
            android:lines="5"
            android:gravity="top|start"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical|horizontal"
            android:scrollbarAlwaysDrawVerticalTrack="true">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/already_visited"
            android:textStyle="bold"
            android:labelFor="@id/tvVisited"
            android:text="@string/already_visited">
        </TextView>

        <TextView
            android:id="@+id/tvVisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btnBackPlace"
            style="@style/botoes"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/back" />
    </LinearLayout>

</ScrollView>

</LinearLayout>